# backend

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  db.sqlite3.bak  doc.txt  docker-compose.dev.yml  docker-entrypoint.sh  env.txt  isort.cfg  manage.py  pyproject.toml  request.http  requirements.txt  setup.cfg
.github/workflows/: main.yml
api/: urls.py
api/v1/: urls.py
autoservice/: admin.py  apps.py  models.py
autoservice/migrations/: 0001_initial.py  0002_auto_20230919_1854.py  0002_company_logo.py  0002_initial.py  0003_auto_20230919_1948.py  0004_autoservice_site.py  0005_auto_20230920_1945.py  0006_auto_20230921_0610.py  0007_feedback.py  0008_auto_20230921_1216.py  0009_auto_20230922_1948.py  0010_auto_20230922_2005.py
backend/backend/: settings.py
backend/cars/: models.py
car_service/: settings.py  urls.py  wsgi.py
cars/: admin.py  models.py
cars/migrations/: 0001_initial.py  0002_alter_cars_color.py  0002_auto_20230919_1558.py  0002_cars_owner.py
core/: utils.py  validators.py
docs/: development_container.md
feedback/: admin.py  models.py
feedback/migrations/: 0001_initial.py  0002_delete_feedback.py
infra/: docker-compose.production.yml  nginx.conf
jobs/: admin.py  models.py
jobs/migrations/: 0001_initial.py
management/commands/: import_brand.py  import_transport.py  load_city.py
order/: admin.py  models.py
static/data/: autoservice_short_list.json  avtoservice.json  brand.csv  koord_russia.csv  russia_city.csv  russia_city_short_list.csv  service.csv  (+2 more)
users/: admin.py  backends.py  models.py
(+50 files in other folders)
